Multi-input socket on boolean node only accepts single input #87195

Closed
opened 2021-04-04 16:56:40 +02:00 by Erindale · 6 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: GeForce RTX 2070 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 461.92

Blender Version
Broken: version: 2.93.0 Alpha, branch: master, commit date: 2021-04-03 16:32, hash: 8681504f06
Worked: (newest version of Blender that worked as expected)

Short description of error
The new multi-input socket on the Boolean node will only take accept a single input while in Difference mode.
Socket works fine in other modes and if you plug in multiple inputs while in intersect or union, you can then switch back to difference and they'll remain and work correctly until you try and plug in another in which case it will replace them all.

Exact steps for others to reproduce the error
Open a new blend file, add a geometry nodes tree and create a boolean node. Attempt to plug multiple things into the multi-input socket.

2021-04-04 15-47-48.mp4

boolean.blend

**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: GeForce RTX 2070 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 461.92 **Blender Version** Broken: version: 2.93.0 Alpha, branch: master, commit date: 2021-04-03 16:32, hash: `8681504f06` Worked: (newest version of Blender that worked as expected) **Short description of error** The new multi-input socket on the Boolean node will only take accept a single input while in `Difference` mode. Socket works fine in other modes and if you plug in multiple inputs while in intersect or union, you can then switch back to difference and they'll remain and work correctly until you try and plug in another in which case it will replace them all. **Exact steps for others to reproduce the error** Open a new blend file, add a geometry nodes tree and create a boolean node. Attempt to plug multiple things into the multi-input socket. [2021-04-04 15-47-48.mp4](https://archive.blender.org/developer/F9919809/2021-04-04_15-47-48.mp4) [boolean.blend](https://archive.blender.org/developer/F9919810/boolean.blend)
Author

Added subscriber: @Erindale

Added subscriber: @Erindale
Member

Added subscriber: @HooglyBoogly

Added subscriber: @HooglyBoogly
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Thanks for the report! I noticed this when changing the boolean node, but hadn't gotten around to fixing it yet. The report is helpful to track it!

Thanks for the report! I noticed this when changing the boolean node, but hadn't gotten around to fixing it yet. The report is helpful to track it!

This issue was referenced by 2fbee4598c

This issue was referenced by 2fbee4598cb7ba0430bf16a0ebb9ec9fabacf42d
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Hans Goudey self-assigned this 2021-04-07 07:32:45 +02:00
Thomas Dinges added this to the 2.93 LTS milestone 2023-02-07 18:46:14 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#87195
No description provided.